--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -38,6 +38,11 @@
     flex-direction: column;
 }
 
+.heroText {
+    font-size: 1.3rem;
+    margin: 10px;
+}
+
 .h1 {
     font-family: var(--font-inria-serif);
     font-size: 7rem;
@@ -68,6 +73,6 @@
 
 @media (max-width: 600px) {
     .h2 {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 }
